k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: model
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8800
  selector:
    app: model
